feature on expenses/index.html that allows you to enable and disable selects depending if you select either a credit card or bank account

--- a/app/templates/expense_categories/index.html
+++ b/app/templates/expense_categories/index.html
@@ -61,7 +61,7 @@
             <thead>
                 <tr>
                 <th scope="col"># Id</th>
-                <th scope="col">Category</th>
+                <th scope="col">Name</th>
                 <th scope="col">Create at</th>
                 <th scope="col">Acctions</th>
                 </tr>
