template, controller and routes file for income have been created

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -28,7 +28,7 @@
                         <a class="nav-link" href="{{ url_for('credit_card.index' ) }}">Credit Cards</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Incomes</a>
+                        <a class="nav-link" href="{{ url_for('income.index' ) }}">Incomes</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('expense.index' ) }}">Expenses</a>
