--- a/app/templates/incomes/index.html
+++ b/app/templates/incomes/index.html
@@ -4,33 +4,133 @@
 
 {% block content %}
     <div class="container w-75">
+
         <h2>Incomes</h2>
-        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-bank">New Bank</button>
+        <section class="modal fade" tabindex="-1" id="create-income">
+            <form action="{{ url_for('income.create' ) }}" method="POST">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">New Income</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="row">
+                                <div class="col-sm">
+                                    <div class="form-floating mt-2">
+                                        <input type="text" name="amount" id="amount-id" class="form-control"
+                                            placeholder="Amount" required>
+                                        <label for="amount-id">Amount</label>
+                                    </div>
+                                </div>
+                                <div class="col-sm">
+                                    <div class="form-check form-switch mt-2">
+                                        <input class="form-check-input" type="checkbox" name="is-cash" id="is-cash-id" switch checked>
+                                        <label class="form-check-label" for="checkNativeSwitch">
+                                            Cash
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-floating mt-2">
+                                    <select name="select-bank-account" id="select-bank-account-id" class="form-select">
+                                        <option value="none">...Select...</option>
+                                        {% for ba in bank_accounts %}
+                                        <option value="{{ ba.id }}">{{ ba.nick_name }}</option>                                        
+                                        {% endfor %}
+                                    </select>
+                                    <label for="e-select-bank-account-id" class="p-3">Bank Account</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Save</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </section>
+        <section class="modal fade" tabindex="-1" id="edit-income">
+            <form action="{{ url_for('income.update' ) }}" method="POST">
+                <input type="hidden" name="income_id" id="income-id">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Edit</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="row">
+                                <div class="col-sm">
+                                    <div class="form-floating mt-2">
+                                        <input type="text" name="amount" id="e-amount-id" class="form-control"
+                                            placeholder="Amount" required>
+                                        <label for="amount-id">Amount</label>
+                                    </div>
+                                </div>
+                                <div class="col-sm">
+                                    <div class="form-check form-switch mt-2">
+                                        <input class="form-check-input" type="checkbox" name="is-cash" id="e-is-cash-id" switch checked>
+                                        <label class="form-check-label" for="checkNativeSwitch">
+                                            Cash
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-floating mt-2">
+                                    <select name="select-bank-account" id="e-select-bank-account-id" class="form-select">
+                                        <option value="none">...Select...</option>
+                                        {% for ba in bank_accounts %}
+                                        <option value="{{ ba.id }}">{{ ba.nick_name }}</option>                                        
+                                        {% endfor %}
+                                    </select>
+                                    <label for="e-select-bank-account-id" class="p-3">Bank Account</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="submit" class="btn btn-primary">Save</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </section>
+        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-income">New Income</button>
         <table class="table table-striped">
             <thead>
                 <tr>
                 <th scope="col"># Id</th>
                 <th scope="col">Amount</th>
+                <th scope="col">Is Cash</th>
+                <th scope="col">Bank Account</th>
                 <th scope="col">Create at</th>
                 <th scope="col">Acctions</th>
                 </tr>
             </thead>
             
             <tbody>
-                {% for bank in banks %}                    
+              {% for income in incomes %}
                 <tr>
-                    <th scope="row">{{ bank.id }}</th>
-                    <td>{{ bank.name }}</td>
-                    <td>{{ bank.created_at }}</td>
+                    <th scope="row">{{ income.id }}</th>
+                    <td>{{ income.amount }}</td>
+                    <td>{{ income.is_cash }}</td>
+                    <td>{{ income.bank_account.nick_name }}</td>
+                    <td>{{ income.created_at }}</td>
                     <td>
                         <div class="d-flex gap-2">
                             <button 
                                 type="button" 
                                 class="btn btn-success" 
                                 data-bs-toggle="modal" 
-                                data-bs-target="#edit-bank"
-                                data-id=""
-                                data-name=""
+                                data-bs-target="#edit-income"
+                                data-income-id="{{ income.id }}"
+                                data-amount="{{ income.amount }}"
+                                data-is-cash="{{ income.is_cash }}"
+                                data-bank-account-id="{{ income.bank_account_id }}"
                             >
                             Edit
                             </button>
@@ -40,8 +140,52 @@
                         </div>
                     </td>
                 </tr>
-                {% endfor %}
+              {% endfor %}
             </tbody>
         </table>
     </div>
+
+<script> 
+    document.addEventListener('DOMContentLoaded', () => {
+        const createIncomeModal = document.getElementById('create-income');
+        const editIncomeModal = document.getElementById('edit-income');
+
+        function toggleBankAccount(checkbox, select){
+            if(checkbox.checked) {
+                select.disabled = true;
+                select.value = "none";
+            } else {
+                select.disabled = false;
+            }
+        }
+        
+        createIncomeModal.addEventListener('show.bs.modal', () => {
+            const isCash = document.getElementById('is-cash-id');
+            const bankAccountsSelect = document.getElementById('select-bank-account-id');
+
+            toggleBankAccount(isCash, bankAccountsSelect);
+            isCash.addEventListener('change', () => toggleBankAccount(isCash, bankAccountsSelect));
+        });
+
+        editIncomeModal.addEventListener('show.bs.modal', (event) => {
+            const button = event.relatedTarget;
+            const editIsCash = document.getElementById('e-is-cash-id');
+            const editBankAccountsSelect = document.getElementById('e-select-bank-account-id');
+            const editAmount = document.getElementById('e-amount');
+
+            toggleBankAccount(editIsCash, editBankAccountsSelect);
+            editIsCash.addEventListener('change', () => toggleBankAccount(editIsCash, editBankAccountsSelect));
+
+            const oldIsCash = button.getAttribute('data-is-cash') === 'True';
+            const oldBankAccountId = button.getAttribute('data-bank-account-id');
+            const oldAmount = button.getAttribute('data-amount');
+            const incomeId = button.getAttribute('data-income-id');
+
+            document.getElementById('e-amount-id').value = oldAmount;
+            document.getElementById('e-select-bank-account-id').value = oldBankAccountId;
+            document.getElementById('e-is-cash-id').checked = oldIsCash;
+            document.getElementById('income-id').value = incomeId;
+        });
+    })
+</script>
 {% endblock %}
