--- a/app/templates/incomes/index.html
+++ b/app/templates/incomes/index.html
@@ -3,6 +3,7 @@
 {% block title %}Incomes{% endblock %}
 
 {% block content %}
+
     <div class="container w-75">
 
         <h2>Incomes</h2>
@@ -134,7 +135,7 @@
                             >
                             Edit
                             </button>
-                            <form action="#" method="post">
+                            <form action="{{ url_for('income.delete', id=income.id ) }}" method="post">
                                 <button type="submit" class="btn btn-danger">Delete</button>
                             </form>
                         </div>
@@ -208,5 +209,6 @@
         });
     })
 </script>
+<link href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 {% endblock %}
